syntax = "proto3";

package RPCProto;

option go_package = "github.com/bytelang/kplayer/types/server";

import "gogoproto/gogo.proto";

message Output {
	string path = 1 [(gogoproto.moretags) = "validate:\"required\""];
	string unique = 2 [(gogoproto.moretags) = "validate:\"required\""];
}

// add
message OutputAddArgs {
	Output output = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "validate:\"required\""];
}
message OutputAddReply {
	Output output = 1 [(gogoproto.nullable) = false];
}

// remove
message OutputRemoveArgs {
	string unique = 1;
}
message OutputRemoveReply {
	Output output = 1;
}

// list
message OutputListArgs {
}
message OutputListReply {
	repeated Output outputs = 1;
}